# github-updater-rust

./: Cargo.toml  README.md
.github/workflows/: generate-changelog.yml  lints.yml  rust-lint-and-format-check.yml
src/: error.rs  lib.rs
src/errors/: builder_missing_element.rs  builder_not_initialized.rs  mod.rs  update_error.rs
