[package]
name = "github-updater"
version = "0.0.6"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2024"
description = "A small library to update rust binaries from GitHub releases."
repository = "https://github.com/Asthowen/github-updater-rust"
readme = "README.md"
license = "GPL-3.0"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
md-5 = "0.10"