[package]
name = "github-updater"
version = "0.1.0"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2024"
description = "A small library to update rust binaries from GitHub releases."
repository = "https://github.com/Asthowen/github-updater-rust"
readme = "README.md"
license = "GPL-3.0"
publish = false

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
sha2 = "0.10"